Modify title and logo in index.html
Updated the title and logo in the HTML file.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nó Digital // Sistemas de Elite</title>
+    <title>Nó Digital</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
@@ -18,7 +18,7 @@
 
     <main class="flex-grow container mx-auto px-6 py-12">
         <div class="flex flex-col items-center mb-16">
-            <img src="digital.jpeg" alt="Nó Digital Logo" class="w-32 h-32 mb-6 object-contain rounded-xl">
+            <img src="11zon_cropped" alt="Nó Digital Logo" class="w-32 h-32 mb-6 object-contain rounded-xl">
             
             <h1 class="text-4xl md:text-5xl font-black tracking-tighter mb-2 text-center text-white">NÓ DIGITAL</h1>
             <p class="text-zinc-500 font-medium tracking-widest text-sm uppercase">Sistemas de Elite</p>
@@ -114,3 +114,4 @@
     </script>
 </body>
 </html>
+
