Refactor index.html for improved structure and title
Updated the title and cleaned up the HTML structure.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nó Digital // Sistemas de Elite</title>
+    <title>Nó Digital</title>
     
     <link rel="icon" type="image/png" href="digital.png">
     
@@ -116,3 +116,4 @@
     </script>
 </body>
 </html>
+
